--- a/style.css
+++ b/style.css
@@ -1,73 +1,423 @@
-.st0{fill:#FEFEFE;}
-.st1{fill:#DDDDDD;}
-.st2{fill:#E0E0E0;}
-
-
-svg {
-    transform: scale(40%);
+* {
+  font-family: 'IM Fell English SC', serif;
+    color:rgb(200, 119, 119);
+    margin: 0;
+    padding: 0;
 }
 
-svg:hover .flash{
-    animation-play-state: running;
-    animation-iteration-count: infinite;
+.slider {
+  width: 500px;
+  height: 900px;
+  background-color: rgb(255, 255, 255);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  text-align: center;
+  overflow: hidden;
+}
+.image-container {
+  width: 1500px;
+  background-color: rgb(255, 255, 255);
+  height: 900px;
+  clear: both;
+  position: relative;
+  -webkit-transition: left 2s;
+  -moz-transition: left 2s;
+  -o-transition: left 2s;
+  transition: left 2s;
+}
+.slide {
+  float: left;
+  margin: 0px;
+  padding: 0px;
+  position: relative;
+}
+#slide-1:target ~ .image-container {
+  left: 0px;
+}
+#slide-2:target ~ .image-container {
+  left: -500px;
+}
+#slide-3:target ~ .image-container {
+  left: -1000px;
+}
+.buttons {
+  position: relative;
+  top: -20px;
+}
+.buttons a {
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  border-radius: 50px;
+  background-color: rgb(238, 144, 144);
 }
 
-@keyframes flash {
-    from,
-    50%,
-    to {
-      opacity: 1;
+
+body{
+  background-color:  rgb(#faf2e7);
+  width:100%;
+}
+
+h2{
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size:20px;
+  height:auto;
+}
+
+h3{
+  font-family: 'IM Fell English SC', serif;
+  font-weight: 400;
+  font-style: normal;
+  height: 25vh 
+}
+
+a{
+  font-family: 'lust-script-display', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  height: 50 vh; 
+}
+
+/* img {
+    width: 100%;
+    height: auto;
+} */
+
+/* NAVBAR CSS */
+
+  /* HEADER CSS */
+.header {
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-color: #faf2e7;
+}
+
+.welcome{
+    margin-top: 25vh;
+    text-align: center;
+    font-weight: 500;
+    font-family: 'IM Fell English SC', serif;
+    font-size:4em;
+    color:rgb(0, 0, 0)}
+
+
+
+/* IMAGE GALLERY CSS */
+.image-gallery {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr minmax(350px, 1fr)  minmax(350px, 1fr) minmax(350px, 1fr) 1fr;
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    grid-template-areas:
+    ". a b c ."
+    ". d e f ."
+    ;
+}
+
+.box-styling {
+    height: 350px;
+    background-color: rgb(250, 100, 175);
+  }
+
+.box-wrapper{
+  height:350px;
+  border-radius: 5%;
+}
+.box1 {
+    grid-area: a;
+}
+
+.box2 {
+    grid-area: b;
+}
+
+.box3 {
+    grid-area: c;
+}
+
+.box4 {
+    grid-area: d;
+}
+
+.box5 {
+    grid-area: e;
+}
+
+.box6 {
+    grid-area: f;
+}
+
+
+/* ABOUT ME CSS*/
+.about-me {
+    height: 100vh;
+    background-color: (133, 218, 246); 
+    padding: 20vh 50px 0 50px;
+    grid-template-columns: (2, 1fr);
+    grid-template-areas:
+        "top ."
+        "about ."
+        "text picture"
+        ". bottom"
+        ;
+}
+
+#top{
+  fill:#FFFFFF;
+  position:absolute;
+  top:0;
+  left:0;
+  /* grid-area: top; */
+  width: 20%;
+}
+
+.about-me h3{
+  position: absolute;
+  font-size: 50%;
+  margin-top: -100px;
+  margin-left: 50px;
+}
+
+.about-me img{
+  width: 20%;
+  border-radius: 8%;
+  clip-path: circle(50%);
+}
+
+.about-me p{
+  text-align: left;
+  font-size:1em;
+  line-height: 1.5rem;
+  width:50%;
+}
+
+#bottom{
+  fill:#FFFFFF;
+  position:absolute;
+  right: 0;
+  bottom:0;
+  width: 20%;
+}
+.about-me {
+  height: 100vh;
+  background-color:  rgb(250, 242, 231); 
+  padding: 20vh 50px 0 50px;
+  
+}
+
+#top{
+  fill:#FFFFFF;
+  position:absolute;
+  top:0;
+  left:0;
+  width: 60%;
+}
+
+.about-me-regular-wrappe h3{
+margin-bottom: 30px;
+font-size: 50px;
+position: relative;
+}
+
+.about-me h3{
+position: absolute;
+font-size: 60px;
+margin-top: -200px;
+margin-left: 50px;
+}
+.about-me img{
+width: 500px;
+border-radius: 8%;
+margin-bottom: 4em;
+clip-path: circle(50%);
+margin-left: 60%;
+}
+
+.about-me p{
+text-align: left;
+font-size:20px;
+line-height: 30px;
+width:40%;
+margin-top: -350px;
+}
+
+.about-me a{
+  text-align: left;
+  font-size:20px;
+  line-height: 1.5rem;
+  width:40%;
+  margin-top: -350px;
+}
+
+#bottom{
+  fill:#FFFFFF;
+  position:absolute;
+  right: 0;
+  bottom:0;
+  width: 60%;
+  margin-bottom:-10px;
+}
+   /* footer section */
+
+footer h3{
+  font-size: 30px;
+  position: absolute;
+  margin-top:-40px;
+  margin-left: 46%;
+}
+
+  footer li {
+    display:inline;
+  }
+  footer ul {
+    max-width: 640px;
+    margin: 2em auto;
+    padding:0;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+  }
+  footer ul li{
+    list-style: none;
+    align-self:flex-end;
+  }
+  footer ul li a {
+    text-decoration:none;
+    color: black;
+    opacity:.6;
+    transition: .3s;
+  }
+  footer ul li a:hover {
+    text-decoration:none;
+    color:white;
+  }
+  footer svg {
+    width:20%;
+  }
+  footer p{
+    font-size: 1em;
+  }
+
+
+
+  /* MEDIA QUERY FOR SMALL SCREENS */
+ @media (max-width:1100px){
+    .image-gallery {
+      padding-bottom: 0px;
+        margin-bottom: 600px;
+        grid-template-columns: 1fr minmax(350px, 1fr) minmax(350px, 1fr) 1fr;
+        grid-template-areas:
+        ". a b ."
+        ". c d ."
+        ". e f ."
+        ;
+    }
+ }
+
+/* MEDIA QUERY FOR MOBILE */
+ @media (max-width:640px){
+
+     nav {
+         padding-left: 0;
+         margin-top: 25vh;
+         text-align: center;
+         font-weight: 500;
+         font-family: 'IM Fell English SC', serif;
+     }
+
+     svg{
+      font-family:'lust-script-display', sans-serif;
+     }
+
+     .welcome{
+      margin-top: 25vh;
+      text-align: center;
+      font-weight: 500;
+      font-family: 'IM Fell English SC', serif;
+      font-size: 25px;
+      color:rgb(0, 0, 0)
+
     }
   
-    25%,
-    75% {
-      opacity: 0;
+
+    .image-gallery {
+        padding-bottom: 200px;
+        grid-template-columns: 1fr minmax(350px, 1fr) 1fr;
+        grid-template-areas:
+        ".a."
+        ".b."
+        ".c."
+        ".d."
+        ".e."
+        ".f."
+        ;
     }
-  }
+    
+    .about-me{
+      height: 100vh;
+      margin-top:-90vh;
+    }
+    .about-me img{
+      width: 60%;
+      border-radius: 8%;
+      margin-bottom: 4em;
+      clip-path: circle(50%);
+      margin-left: 10%;
+    }
+
+    .about-me p{
+      text-align: left;
+      font-size:1em;
+      line-height: 25px;
+      width:100%;
+      margin-top:10px;
+      margin-bottom: 1fr;
+    }
+    #top{
+      fill:#FFFFFF;
+      position:absolute;
+      top:0;
+      left:0;
+      grid-area: t;
+      width: 70%;
+    }
+    
+    .about-me h3{
+      position: absolute;
+      font-size: 30px;
+      margin-top: -100px;
+      font-weight: 600;
+    }
+
+    #bottom{
+      fill:#FFFFFF;
+      position:absolute;
+      right: 0;
+      bottom:0;
+      /* grid-area: t; */
+      width: 90%;
+      margin-bottom:-10px;
+    }
   
-  .flash {
-    animation-name: flash;
-  }
+    footer h3{
+      font-size: 30px;
+      position: absolute;
+      margin-top:-30px;
+      margin-left: 190px;
+      font-weight: 600;
+    }
 
-.flash {
-    backface-visibility: visible;
-    animation: flash 1s;
-    transform-origin: center;
-    animation-play-state: paused;
-}
 
-@keyframes heartBeat {
-  0% {
-    transform: scale(1);
-  }
+ }
 
-  14% {
-    transform: scale(1.3);
-  }
 
-  28% {
-    transform: scale(1);
-  }
 
-  42% {
-    transform: scale(1.3);
-  }
-
-  70% {
-    transform: scale(1);
-  }
-}
-
-.heartBeat {
-    animation-name: heartBeat;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  transform-origin: center;
-  animation-play-state: running;
-  animation-iteration-count: infinite;
-}
-
-svg:hover .heartBeat{
-    animation-play-state: running;
-    animation-iteration-count: infinite;
-}
